worked on .tweet margins to ensure better spacing between subsequent tweeets

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -54,6 +54,7 @@ article.tweet:hover {
 .tweet {
   margin-top: 10px;
   width: 110%;
+  margin-bottom:10px
 }
 
 .tweet:hover {
